[gd_scene load_steps=4 format=3 uid="uid://btxvpgsb55wbr"]

[ext_resource type="Script" uid="uid://c6i3ptfqg7nen" path="res://algorithms/randomness/noiseterrain/noiseterrain.gd" id="1_terrain_script"]

[sub_resource type="StandardMaterial3D" id="TerrainMaterial"]
albedo_color = Color(0.8, 0.4, 0.9, 1)
metallic = 0.3
roughness = 0.4
emission_enabled = true
emission = Color(0.3, 0.1, 0.4, 1)
emission_energy_multiplier = 1.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ccijp"]

[node name="QueerNoiseTerrain" type="Node3D"]
script = ExtResource("1_terrain_script")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 0.8
shadow_enabled = true

[node name="TerrainMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("TerrainMaterial")

[node name="TerrainBody" type="StaticBody3D" parent="."]

[node name="TerrainCollision" type="CollisionShape3D" parent="TerrainBody"]
shape = SubResource("ConvexPolygonShape3D_ccijp")

[node name="ParameterUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ParameterPanel" type="VBoxContainer" parent="ParameterUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0

[node name="TitleLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Queer Noise Terrain Parameters"
horizontal_alignment = 1

[node name="HSeparator1" type="HSeparator" parent="ParameterUI/ParameterPanel"]
layout_mode = 2

[node name="NoiseScaleLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Noise Scale: 1.0"

[node name="NoiseScaleSlider" type="HSlider" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="HeightMultiplierLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Height Multiplier: 5.0"

[node name="HeightMultiplierSlider" type="HSlider" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
step = 0.5
value = 5.0

[node name="BulginessLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Bulginess: 1.0"

[node name="BulginessSlider" type="HSlider" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="OctavesLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Octaves: 4"

[node name="OctavesSlider" type="HSlider" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
min_value = 1.0
max_value = 8.0
value = 4.0

[node name="ColorShiftLabel" type="Label" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
text = "Color Shift: 0.5"

[node name="ColorShiftSlider" type="HSlider" parent="ParameterUI/ParameterPanel"]
layout_mode = 2
max_value = 2.0
step = 0.1
value = 0.5

[node name="HSeparator2" type="HSeparator" parent="ParameterUI/ParameterPanel"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ParameterUI/ParameterPanel"]
layout_mode = 2

[node name="RegenerateButton" type="Button" parent="ParameterUI/ParameterPanel/ButtonContainer"]
layout_mode = 2
text = "Regenerate"

[node name="RandomizeButton" type="Button" parent="ParameterUI/ParameterPanel/ButtonContainer"]
layout_mode = 2
text = "Randomize"

[node name="InfoPanel" type="VBoxContainer" parent="ParameterUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 150.0
grow_horizontal = 0

[node name="InfoLabel" type="Label" parent="ParameterUI/InfoPanel"]
layout_mode = 2
text = "Terrain Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ParameterUI/InfoPanel"]
layout_mode = 2

[node name="SizeLabel" type="Label" parent="ParameterUI/InfoPanel"]
layout_mode = 2
text = "Size: 100x100 units"

[node name="ResolutionLabel" type="Label" parent="ParameterUI/InfoPanel"]
layout_mode = 2
text = "Resolution: 200x200 vertices"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.37604, 2.82117)
